minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw-service
spec:
  type: ClusterIP
  selector:
    app: otus-hw
  ports:
    - protocol: TCP
      port: 8000
      targetPort: otus-hw
